<resources>
    <string name="app_name">Gallery Lock</string>
    <string name="action_settings">Settings</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string name="enter_4_pin">ENTER 4 DIGIT PIN</string>
    <string name="validation_empty">enter name</string>
    <string name="ok">OK</string>
    <string name="unhide_to">Unhide to</string>
    <string name="unhide">UNHIDE</string>
    <string name="cancel">CANCEL</string>
    <string name="original_path">Original Path</string>
    <string name="dcim_gallerylocker_unhide">DCIM/Gallery Locker/Unhide</string>
    <string name="app_settings">App Settings</string>
    <string name="permission_required">Permission Required</string>
    <string name="validation_input_email">Email address is not valid</string>
    <string name="success">Success</string>
</resources>
