<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/unhide_to"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/original_path"
            android:textColor="@color/black"
            android:textSize="17sp"></TextView>

        <LinearLayout
            android:id="@+id/linOriginal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </androidx.recyclerview.widget.RecyclerView>

            <RadioButton
                android:clickable="false"
                android:id="@+id/rbOriginal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|end"
                android:layout_weight="9"
                android:checked="true"
                android:gravity="end">

            </RadioButton>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/dcim_gallerylocker_unhide"
            android:textColor="@color/black"
            android:textSize="17sp"></TextView>

        <LinearLayout
            android:id="@+id/linUnhide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/tvUnhide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </TextView>

            <RadioButton
               android:clickable="false"
                android:id="@+id/rbUnhide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|end"
                android:layout_weight="9"
                android:gravity="end">

            </RadioButton>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background"
                android:text="@string/cancel">

            </Button>

            <Button
                android:id="@+id/btnUnhide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background"
                android:text="@string/unhide"
                android:textColor="@color/colorPrimary">

            </Button>


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

